// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<a
  aria-label="Default"
  class="ds:group ds:inline-flex ds:min-w-[64px] ds:sm:min-w-[124px] ds:flex-col ds:items-center ds:justify-center ds:gap-2 ds:border ds:border-none ds:no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="ds:text-black ds:bg-bg-gray-2 ds:group-hover:text-accent ds:flex ds:size-[64px] ds:select-none ds:items-center ds:justify-center ds:self-center ds:rounded-full"
  >
    target
  </span>
  <span
    class="ds:text-button-md ds:text-black ds:group-hover:text-accent ds:group-hover:underline"
  >
    Default
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<a
  aria-label="Disabled, nonselected"
  class="ds:group ds:inline-flex ds:min-w-[64px] ds:sm:min-w-[124px] ds:flex-col ds:items-center ds:justify-center ds:gap-2 ds:border ds:border-none ds:no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="ds:text-black ds:bg-bg-gray-2 ds:group-hover:text-accent ds:flex ds:size-[64px] ds:select-none ds:items-center ds:justify-center ds:self-center ds:rounded-full"
  >
    target
  </span>
  <span
    class="ds:text-button-md ds:text-black ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<a
  aria-label="Disabled, nonselected"
  class="ds:group ds:inline-flex ds:min-w-[64px] ds:sm:min-w-[124px] ds:flex-col ds:items-center ds:justify-center ds:gap-2 ds:border ds:border-none ds:no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="ds:bg-accent ds:text-white ds:flex ds:size-[64px] ds:select-none ds:items-center ds:justify-center ds:self-center ds:rounded-full"
  >
    target
  </span>
  <span
    class="ds:text-button-md ds:text-accent ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<a
  aria-label="Disabled, nonselected"
  class="ds:group ds:inline-flex ds:min-w-[64px] ds:sm:min-w-[124px] ds:flex-col ds:items-center ds:justify-center ds:gap-2 ds:border ds:border-none ds:no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="ds:bg-accent ds:text-white ds:flex ds:size-[64px] ds:select-none ds:items-center ds:justify-center ds:self-center ds:rounded-full"
  >
    target
  </span>
  <span
    class="ds:text-button-md ds:text-accent ds:group-hover:text-accent ds:group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > selected 1`] = `
<a
  aria-label="Selected"
  class="ds:group ds:inline-flex ds:min-w-[64px] ds:sm:min-w-[124px] ds:flex-col ds:items-center ds:justify-center ds:gap-2 ds:border ds:border-none ds:no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="ds:bg-accent ds:text-white ds:flex ds:size-[64px] ds:select-none ds:items-center ds:justify-center ds:self-center ds:rounded-full"
  >
    target
  </span>
  <span
    class="ds:text-button-md ds:text-accent ds:group-hover:text-accent ds:group-hover:underline"
  >
    Selected
  </span>
</a>
`;
